--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
+# thay ??i kích th??c file upload và tr? t?i n?i l?y ?nh khi upload.
+spring.servlet.multipart.max-file-size=12MB
+spring.servlet.multipart.max-request-size=12MB
